Implement functionality to view tags and certificates

--- a/GiftCertificates/src/main/webapp/WEB-INF/views/index.html
+++ b/GiftCertificates/src/main/webapp/WEB-INF/views/index.html
@@ -5,8 +5,8 @@
     <title>Welcome</title>
 </head>
 <body>
-    <h1 th:text="Welcome"></h1>
-    <a th:href="@{/tags}" th:text="Tags"></a>
-    <a th:href="@{/certificates}" th:text="Certificates"></a>
+    <h1>Welcome</h1>
+    <a th:href="@{/tags}">Manage Tags</a>
+    <a th:href="@{/certificates}">Manage Certificates</a>
 </body>
 </html>
