--- a/GiftCertificates/src/main/webapp/WEB-INF/views/tags/index.html
+++ b/GiftCertificates/src/main/webapp/WEB-INF/views/tags/index.html
@@ -13,6 +13,8 @@
         </li>
     </ul>
 </div>
+<hr/>
+<a th:href="@{/tags/new}" th:text="#{view.tags.create_tag}"></a>
 <a th:href="@{/}" th:text="#{view.home}"></a>
 </body>
 </html>
