--- a/GiftCertificates/src/main/webapp/WEB-INF/views/certificates/index.html
+++ b/GiftCertificates/src/main/webapp/WEB-INF/views/certificates/index.html
@@ -27,6 +27,9 @@
             </tr>
         </tbody>
     </table>
+    <hr/>
+    <a th:href="@{/certificates/new}" th:text="#{view.certificates.create_certificate}"></a>
     <a th:href="@{/}" th:text="Home"></a>
+
 </body>
 </html>
