--- a/GiftCertificates/src/main/webapp/WEB-INF/views/tags/show.html
+++ b/GiftCertificates/src/main/webapp/WEB-INF/views/tags/show.html
@@ -6,13 +6,20 @@
 </head>
 <body>
 <h1 th:text="${tag.getName()}"></h1>
+
 <p th:text="#{view.tags.related_certificates}"></p>
+
 <ul th:each="certificate : ${tag.getGiftCertificates()}">
     <li>
         <a th:href="@{/certificates/{id}(id = ${certificate.getId()})}"
            th:text="${certificate.getName()}"></a>
     </li>
 </ul>
+
+<form th:method="DELETE" th:action="@{/tags/{id}(id=${tag.getId()})}">
+    <input type="submit" th:value="#{view.delete}"/>
+</form>
+
 <a th:href="@{/}" th:text="#{view.home}"></a>
 </body>
 </html>
