--- a/GiftCertificates/src/main/webapp/WEB-INF/views/certificates/show.html
+++ b/GiftCertificates/src/main/webapp/WEB-INF/views/certificates/show.html
@@ -37,7 +37,7 @@
 <form th:method="DELETE" th:action="@{/certificates/{id}(id=${certificate.getId()})}">
     <input type="submit" th:value="#{view.delete}"/>
 </form>
-<a th:href="@{/certificates/edit}" th:text="#{view.edit}"></a>
+<a th:href="@{/certificates/{id}/edit(id = ${certificate.getId()})}" th:text="#{view.edit}"></a>
 <a th:href="@{/}" th:text="#{view.home}"></a>
 </body>
 </html>
