--- a/GiftCertificates/src/main/webapp/WEB-INF/views/certificates/new.html
+++ b/GiftCertificates/src/main/webapp/WEB-INF/views/certificates/new.html
@@ -5,22 +5,35 @@
     <title th:text="#{view.certificates.new_certificate}"></title>
 </head>
 <body>
-    <h1 th:text="#{view.certificates.create_certificate}"></h1>
-    <form th:method="POST" th:action="@{/certificates}" th:object="${certificate}">
-        <label for="name" th:text="#{view.certificates.enter_name}"></label>
-        <input type="text" th:field="*{name}" id="name"/>
+<h1 th:text="#{view.certificates.create_certificate}"></h1>
+<form th:method="POST" th:action="@{/certificates}" th:object="${certificate}">
+    <label for="name" th:text="#{view.certificates.enter_name}"></label>
+    <input type="text" th:field="*{name}" id="name"/>
+    <br/>
+    <label for="description" th:text="#{view.certificates.enter_description}"></label>
+    <input type="text" th:field="*{description}" id="description"/>
+    <br/>
+    <label for="price" th:text="#{view.certificates.enter_price}"></label>
+    <input type="text" th:field="*{price}" id="price"/>
+    <br/>
+    <label for="duration" th:text="#{view.certificates.enter_duration}"></label>
+    <input type="text" th:field="*{duration}" id="duration"/>
+    <br/>
+    <p>
+        <label th:text="#{view.certificates.select_tags}">
+        </label>
         <br/>
-        <label for="description" th:text="#{view.certificates.enter_description}"></label>
-        <input type="text" th:field="*{description}" id="description"/>
-        <br/>
-        <label for="price" th:text="#{view.certificates.enter_price}"></label>
-        <input type="text" th:field="*{price}" id="price"/>
-        <br/>
-        <label for="duration" th:text="#{view.certificates.enter_duration}"></label>
-        <input type="text" th:field="*{duration}" id="duration"/>
-        <br/>
-        <input type="submit" th:value="#{view.create}">
-    </form>
-    <a th:href="@{/}" th:text="Home"></a>
+        <select multiple name="selected_tags">
+            <option th:each="tag : ${tags}" th:value="${tag.getId()}"
+                    th:text="${tag.getName()}"></option>
+        </select>
+    </p>
+
+    <input type="submit" th:value="#{view.create}">
+</form>
+<ul>
+    <li th:each="tag : ${tags}" th:text="${tag.getName()}"></li>
+</ul>
+<a th:href="@{/}" th:text="Home"></a>
 </body>
 </html>
