--- a/GiftCertificates/src/main/webapp/WEB-INF/views/certificates/edit.html
+++ b/GiftCertificates/src/main/webapp/WEB-INF/views/certificates/edit.html
@@ -6,28 +6,28 @@
 </head>
 <body>
 <h1 th:text="#{view.certificates.edit_certificate}"></h1>
-<form th:method="POST" th:action="@{/certificates}" th:object="${certificate}">
-    <label for="name" th:text="#{view.certificates.enter_name}"></label>
-    <input type="text" th:field="*{name}" id="name"/>
-    <br/>
-    <label for="description" th:text="#{view.certificates.enter_description}"></label>
-    <input type="text" th:field="*{description}" id="description"/>
-    <br/>
-    <label for="price" th:text="#{view.certificates.enter_price}"></label>
-    <input type="text" th:field="*{price}" id="price"/>
-    <br/>
-    <label for="duration" th:text="#{view.certificates.enter_duration}"></label>
-    <input type="text" th:field="*{duration}" id="duration"/>
-    <p>
-        <label th:text="#{view.certificates.select_tags}" for="tag_select"></label>
+    <form th:method="PUT" th:action="@{/certificates/{id}(id = ${certificate.getId()})}" th:object="${certificate}">
+        <label for="name" th:text="#{view.certificates.enter_name}"></label>
+        <input type="text" th:field="*{name}" id="name"/>
         <br/>
-        <select autofocus multiple name="selected_tags" id="tag_select">
-            <option th:each="tag : ${tags}" th:value="${tag.getId()}" th:text="${tag.getName()}"
-                    th:selected="${selectedTags.contains(tag)}"></option>
-        </select>
-    </p>
-    <input type="submit" th:value="#{view.update}">
-</form>
+        <label for="description" th:text="#{view.certificates.enter_description}"></label>
+        <input type="text" th:field="*{description}" id="description"/>
+        <br/>
+        <label for="price" th:text="#{view.certificates.enter_price}"></label>
+        <input type="text" th:field="*{price}" id="price"/>
+        <br/>
+        <label for="duration" th:text="#{view.certificates.enter_duration}"></label>
+        <input type="text" th:field="*{duration}" id="duration"/>
+        <p>
+            <label th:text="#{view.certificates.select_tags}" for="tag_select"></label>
+            <br/>
+            <select autofocus multiple name="selected_tags" id="tag_select">
+                <option th:each="tag : ${tags}" th:value="${tag.getId()}" th:text="${tag.getName()}"
+                        th:selected="${oldTags.contains(tag)}"></option>
+            </select>
+        </p>
+        <input type="submit" th:value="#{view.update}">
+    </form>
 <a th:href="@{/}" th:text="Home"></a>
 </body>
 </html>
